--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         </div>
     </div>
 
-    <script src="/scripts/jquery.js"></script>
-    <script src="/scripts/sammy.js"></script>
-    <script src="/scripts/app.js"></script>
+    <script src="scripts/jquery.js"></script>
+    <script src="scripts/sammy.js"></script>
+    <script src="scripts/app.js"></script>
 
 </body>
 </html>
