Less confusing names.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#picture">Show picture</a>
             <a href="#message/2">Show message 2</a>
             <a href="#message/7">Show message 7</a>
-            <a href="#showMeSnowboard">ShowMeSnowboard</a>
+            <a href="#showMeMissingSnowboard">Show me missing snowboard</a>
         </menu>
         <div id="welcome">
             Hello world
